qg/model/QgFortran.h

// Observation vector key type
typedef int F90ovec;
// -----------------------------------------------------------------------------
//  Observation vector
// -----------------------------------------------------------------------------
  void qg_obsvec_setup_f90(F90ovec &, const int &, const int &);
  void qg_obsvec_clone_f90(F90ovec &, const F90ovec &);
  void qg_obsvec_delete_f90(F90ovec &);
  void qg_obsvec_copy_f90(const F90ovec &, const F90ovec &);
  void qg_obsvec_zero_f90(const F90ovec &);
  void qg_obsvec_settomissing_ith_f90(const F90ovec &, const int &);
  void qg_obsvec_ones_f90(const F90ovec &);
  /// set ObsVector (with key \p obsvector_key) values to missing values where
  /// mask ObsVector (with key \p mask_key) values are set to 1
  void qg_obsvec_mask_f90(const F90ovec & obsvector_key, const F90ovec & mask_key);
  /// set ObsVector (with key \p obsvector_key) values to missing values where
  /// mask ObsVector (with key \p mask_key) values are set to missing value
  void qg_obsvec_mask_with_missing_f90(const F90ovec & obsvector_key,
                                       const F90ovec & mask_key);
  void qg_obsvec_mul_scal_f90(const F90ovec &, const double &);
  void qg_obsvec_add_f90(const F90ovec &, const F90ovec &);
  void qg_obsvec_sub_f90(const F90ovec &, const F90ovec &);
  void qg_obsvec_mul_f90(const F90ovec &, const F90ovec &);
  void qg_obsvec_div_f90(const F90ovec &, const F90ovec &);
  void qg_obsvec_axpy_f90(const F90ovec &, const double &, const F90ovec &);
  void qg_obsvec_invert_f90(const F90ovec &);
  void qg_obsvec_random_f90(const ObsSpaceQG &, const F90ovec &);
  void qg_obsvec_dotprod_f90(const F90ovec &, const F90ovec &, double &);
  void qg_obsvec_stats_f90(const F90ovec &, double &, double &, double &);